# ka9q_ubersdr

./: .dockerignore  .gitignore  AUDIO_EXTENSION_FRAMEWORK.md  CHAT_SYSTEM.md  DECODER.md  FRONTEND_STATUS.md  GEOIP_SETUP.md  GOTTY_CLIENT_USAGE.md  HPSDR_PROTOCOL2.md  HTTP_LOGS_API.md  MCP_IMPLEMENTATION.md  Makefile  NOISEFLOOR.md  OPUS_SUPPORT.md  PROTOCOL2_COMPARISON.md  README.md  SESSION_BAND_MODE_TRACKING.md  SPECTRUM_BINARY_PROTOCOL.md  addon_proxy.go  addon_proxy_admin.go  addon_proxy_config.go  addons.json  addons.yaml  admin.go  admin.go.backup  admin_monitor_health.go  ant_switch_api.go  ant_switch_scheduler.go  ant_switch_uberant.go  asnban.go  audio.go  audio.widget.html  audio_dsp_insert.go  audio_extension.go  audio_extension_manager.go  audio_http_stream.go  band_snr_quality.go  bands.yaml.example  bookmarks.yaml.example  build-js.sh  (+227 more)
clients/: rbn_calibrate.py
clients/CW_Skimmer/UberSDRIntf/: BUILD.md  BUILD_INSTRUCTIONS.md  CMakeLists.txt  DYNAMIC_OFFSET_API.md  INI_CONFIGURATION.md  IXSocketFactoryStub.cpp  IXUserAgentStub.cpp  MULTI_INSTANCE_DESIGN.md  README.md  SOFTWARE_FREQUENCY_SHIFT.md  SimpleWebSocket.h  UberSDR.cpp  UberSDR.h  UberSDRIntf.cpp  UberSDRIntf.def  UberSDRIntf.h  UberSDRIntf.ini  UberSDRShared.cpp  UberSDRShared.h  test_load.cpp  test_struct.cpp
clients/CW_Skimmer/UberSDRIntf/build32/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  UberSDRIntf.sln  UberSDRIntf.slnx  UberSDRIntf.vcxproj  UberSDRIntf.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
clients/CW_Skimmer/UberSDRIntf/build32/Release/: UberSDRIntf.exp  UberSDRIntf.lib
clients/CW_Skimmer/UberSDRIntf/build32/UberSDRIntf.dir/Release/: UberSDRIntf.dll.recipe
clients/CW_Skimmer/UberSDRIntf/build32/UberSDRIntf.dir/Release/UberSDRIntf.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  UberSDRIntf.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
clients/CW_Skimmer/UberSDRIntf/build32/Win32/Release/ALL_BUILD/: ALL_BUILD.recipe
clients/CW_Skimmer/UberSDRIntf/build32/Win32/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
clients/CW_Skimmer/UberSDRIntf/build32/Win32/Release/ZERO_CHECK/: ZERO_CHECK.recipe
clients/CW_Skimmer/UberSDRIntf/build32/Win32/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
clients/CW_Skimmer/UberSDRMonitor/: $null  BUILD.md  CMakeLists.txt  README.md  UberSDRMonitor.cpp  UberSDRMonitor.rc  resource.h  restart_monitor.bat
clients/CW_Skimmer/UberSDRMonitor/build32/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  UberSDRMonitor.sln  UberSDRMonitor.slnx  UberSDRMonitor.vcxproj  UberSDRMonitor.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
clients/CW_Skimmer/UberSDRMonitor/build32/UberSDRMonitor.dir/Release/: UberSDRMonitor.exe.recipe  UberSDRMonitor.res
clients/CW_Skimmer/UberSDRMonitor/build32/UberSDRMonitor.dir/Release/UberSDRMonitor.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  UberSDRMonitor.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
clients/CW_Skimmer/UberSDRMonitor/build32/Win32/Release/ALL_BUILD/: ALL_BUILD.recipe
clients/CW_Skimmer/UberSDRMonitor/build32/Win32/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
clients/CW_Skimmer/UberSDRMonitor/build32/Win32/Release/ZERO_CHECK/: ZERO_CHECK.recipe
clients/CW_Skimmer/UberSDRMonitor/build32/Win32/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
collector/: Dockerfile  POWERDNS.md  README.md  WEBPAGE.md  build.sh  config.json.example  docker-compose.yml  entrypoint.sh  go.mod  main.go  powerdns.go
config/: addons.yaml.example  ant_switch_schedule.yaml.example  bookmarks.yaml.example  config.yaml.example  custom-links.json.example  cwskimmer.yaml.example  decoder.yaml.example  extensions.yaml.example  notifications.yaml.example  rotator_schedule.yaml.example  ui.yaml.example
cty/: cty_iso2_map.json
docker/: .dockerignore  Caddyfile  Caddyfile.default  Dockerfile  Dockerfile.fluent-bit  Dockerfile.ka9q-radio  Dockerfile.ubersdr  README-caddy.md  README.md  ZOMBIE_PROCESS_FIX.md  caddy-entrypoint.sh  docker-compose-caddy.yml  docker-compose-dockerhub.yml  docker-compose.yml  entrypoint.sh  fluent-bit-entrypoint.sh  fluent-bit.conf  suggest-radiod-cpuset.sh
dsp/: ubersdr_dsp.pb.go  ubersdr_dsp_grpc.pb.go
geoip/: licence.txt.example  readme.txt
gudriver/: gudriver.go  sanitize.go
homeassistant/: ubersdr-dashboard.yaml
ka9q_multidecoder/: Makefile  decode_parser.c  decode_parser.h  ka9q-multidecoder.c  multidecoder-hf-complete.conf.example  multidecoder-hf-single.conf  pskreporter.c  pskreporter.h  radiod-rx888.conf  wsprnet.c  wsprnet.h
kiwi/: audio.js  audio.min.js  index.html  index.min.html  kiwisdr.min.css  kiwisdr.min.js  openwebrx.js  openwebrx.min.css  openwebrx.min.js
kiwi_wspr/: .gitignore  app_config.go  client.go  config.yaml  config.yaml.example  coordinator_manager.go  main.go  mqtt_publisher.go  web_server.go  wspr_coordinator.go
load/: README.md  real-load-daemon.service  real-load-daemon.sh  real-load.sh
plans/: SDRPP_COMPLETE_SIGNAL_CHAIN.md  SDRPP_SSB_ARCHITECTURE.md  db-read-migration.md  kiwi-emulation-audio-bug-analysis.md  voice_activity_adaptive_offset.md  voice_activity_api_compatibility.md  (+2 more)
soapy_driver/: CMakeLists.txt  README.md  SoapyUberSDR.cpp
(+833 files in other folders)
